# bu-processor

./: .env.example  .env.flags.example  .env.production  .env.smoke.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  API_AUTHENTICATION_SETUP.md  CLASSIFICATION_METADATA_IMPLEMENTATION.md  CODE_QUALITY.md  CONTRIBUTING.md  CONTRIBUTORS.md  EMBEDDER_CACHING_IMPLEMENTATION_SUMMARY.md  ENHANCED_SEMANTIC_API_COMPLETE.md  FINAL_SUMMARY.py  INGESTION_IMPLEMENTATION_SUMMARY.md  INGESTION_JOB_SYSTEM_DOCS.md  LICENSE  MOCK_SAFE_SUCCESS_SUMMARY.md  MODEL_MANAGEMENT_STRATEGY.md  NOOP_ADAPTERS_IMPLEMENTATION_SUMMARY.md  PDF_INTEGRATION_SUMMARY.md  PINECONE_FACADE_IMPLEMENTATION_SUMMARY.md  PINECONE_INTEGRATION_COMPLETE.md  QUERY_PATH_COMPLETION_SUMMARY.md  README.md  SEMANTIC_CHUNKING_INTEGRATION_COMPLETE.md  SEMANTIC_ENHANCEMENT_FIXES_COMPLETE.md  SIMHASH_GENERATOR_FIXES_COMPLETE.md  TIMEOUT_RETRY_FIXES_COMPLETE.md  UNIFIED_TEST_ENVIRONMENT_FIXES_COMPLETE.md  bu_store.db  classifier_improvements_summary.py  cli.py  comprehensive_diagnostic.py  config.yaml  corrected_diagnostic.py  debug_class_definition.py  debug_class_end.py  (+83 more)
bu_processor/: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  0.26.0  CONTRIBUTING.md  DEPENDENCY_SKIP_MARKERS_COMPLETE.md  Dockerfile  FINAL_IMPLEMENTATION_SUCCESS.md  FINAL_IMPLEMENTATION_SUMMARY.md  GIT_REPAIR_GUIDE.md  INTENT_IMPLEMENTATION_SUMMARY.md  LAZY_LOADING_SOLUTION.md  LOGGING_REFACTORING_COMPLETE.md  MANIFEST.in  MVP_CLEANUP_SUMMARY.md  QUALITY_GATES_RERANKING_SUMMARY.md  SESSION_COMPLETE_SUMMARY.md  SOFTMAX_THRESHOLD_COMPLETE.md  STANDARDIZED_WIRING_SUMMARY.md  SUBMODULE_FIX_GUIDE.md  TESTS_IMPORT_ELIMINATION_COMPLETE.md  TEST_FIX_PLAN.md  TRACE_EVALUATION_SYSTEM_SUMMARY.md  TRACE_LOGGING_EVALUATION_SUMMARY.md  VERIFICATION_SMOKE_TEST_SUMMARY.md  WIRING_IMPLEMENTATION_STATUS.md  __init__.py  bu_store.db  cli.py  cli_answer_synthesis.py  create_training_csvs_quickfix.py  debug_classifier.py  debug_expansion.py  debug_semantic.py  debug_specific_test.py  debug_trace.py  demo.py  demo_complete_system.py  demo_eval_report.json  (+104 more)
bu_processor/.github/: dependabot.yml
bu_processor/.github/ISSUE_TEMPLATE/: question.md
bu_processor/api/: __init__.py
bu_processor/bu_processor/: __init__.py  chunking.py  cli.py  cli_answer.py  cli_answer_synthesis.py  cli_ingest.py  cli_query.py  cli_query_understanding.py  cli_run_with_trace.py  cli_synthesize_orchestrator.py  cli_traced_pipeline.py  config.py  factories.py  ingest.py  ports.py
bu_processor/bu_processor/adapters/: __init__.py
bu_processor/bu_processor/answering/: __init__.py  context_packer.py  grounding.py  llm_openai.py  models.py  openai_answerer.py  pipeline.py  rule_based.py  rule_based_answerer.py  synthesize.py  templates.py
bu_processor/bu_processor/api/: main.py
bu_processor/bu_processor/application/: __init__.py  intake.py
bu_processor/bu_processor/chunking/: __init__.py  simple.py
bu_processor/bu_processor/core/: config.py  flags.py  log_context.py  logging_setup.py  mvp_features.py  mvp_features_deprecated.py  quality_gates.py  ratelimit.py  reranking.py  secrets.py
bu_processor/bu_processor/embeddings/: __init__.py  embedder.py  openai_backend.py  sbert_backend.py  testing_backend.py
bu_processor/bu_processor/eval/: __init__.py  harness.py  metrics.py  quality_gate.py
bu_processor/bu_processor/evaluation/: ml_evaluator_refactored.py
bu_processor/core/: __init__.py  config.py
bu_processor/data/: train.csv
bu_processor/docs/: testing-hygiene.md
bu_processor/evaluation/: __init__.py  improved_ml_evaluator.py.bak  ml_evaluator_refactored.py  ml_vs_heuristic_evaluator.py.bak
bu_processor/examples/: logging_configuration_example.py
bu_processor/pipeline/: __init__.py  chatbot_integration.py  chatbot_web_interface.py  classifier.py  enhanced_integrated_pipeline.py  pdf_extractor.py  pinecone_integration.py  semantic_chunking_enhancement.py  simhash_semantic_deduplication.py
bu_processor/scripts/: check-test-hygiene.bat  check-test-hygiene.sh  cleanup.py  code_quality.py  demo_wiring.py  generate_test_pdfs.py  pinecone_smoke.py  setup_precommit.bat  setup_precommit.sh  test_dimension_guard.py  test_flag_flip.py  test_simplified_pipeline.py
bu_processor/tests/: conftest.py  test_answer_synthesis.py  test_batch_counts_consistent.py  test_classifier.py  test_context_packer.py  test_embeddings_index.py  test_eval_harness.py  test_eval_metrics.py  test_final_verification.py  test_index_ingest_retrieve.py  test_lazy_fixtures_simple.py  test_lazy_loading_demo.py  test_logging_consistency.py  test_pdf_extractor.py  test_pipeline_components.py  test_pipeline_import_stability.py  test_query_understanding.py  test_rerank_and_summarize.py  test_rerank_and_summarize_comprehensive.py  test_retriever.py  test_semantic_chunker_real.py  test_semantic_chunking.py  test_telemetry.py  test_training_smoke.py  test_unified_chunking.py
bu_processor/tools/: run_eval_and_gate.py  run_improved_eval_and_gate.py
(+201 files in other folders)
